maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: value && is not a member of plm.universe.Direction
if(Direction.NORTH&&estFaceMur==false){avance();}
                  ^